--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 			<h1>João da Silva</h1>
 			<nav>
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="portifolio.html">Portifolio</a></li>
 					<li><a href="bio.html">Sobre mim</a></li>
 					<li><a href="blog.html">Blog</a></li>
