--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li class="palavra-home agilidade">Agilidade</li>
             <li class="palavra-home design">Design</li>
         </ul>
+        <a class="faixa-header" href="#">Siga-me no Twitter</a>
     </header>
     <main>
         <section class="secao-inicio saudacao">
